<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="@dimen/media_item_height">

    <ImageView
        android:id="@+id/music_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/media_item_icon_margin_start"
        android:contentDescription="@string/play_item"
        android:src="@drawable/ic_play_arrow_black_36dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/media_item_text_margin_start"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/music_title"
            tools:text="@string/currently_playing_song"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"/>

        <TextView
            android:id="@+id/music_singer"
            tools:text="@string/currently_playing_artist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorSecondary"/>

    </LinearLayout>

</RelativeLayout>