<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/music_playing_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/currently_playing_song"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:padding="8dp"
        android:text="@string/currently_playing_song"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="?android:attr/textColorPrimary"/>

    <LinearLayout
        android:id="@+id/control_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timeline_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/_00_00"
            />

        <SeekBar
            android:id="@+id/timeline_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:indeterminate="false"/>

        <TextView
            android:id="@+id/timeline_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/_00_00"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/control_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/play_previous"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/skip_prev"
            android:padding="8dp"
            android:src="@drawable/ic_skip_previous_white_48dp"/>

        <ImageButton
            android:id="@+id/play_pause"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/play_pause"
            android:padding="8dp"
            android:src="@drawable/uamp_ic_play_arrow_white_48dp"/>

        <ImageButton
            android:id="@+id/play_next"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/skip_next"
            android:padding="8dp"
            android:src="@drawable/ic_skip_next_white_48dp"/>
    </LinearLayout>

</LinearLayout>